# Urchin

./: .gitignore  .gitmodules  CITATION.cff  README.md  block_brain_area.npy  example_client.py  gaelle_scgb_fig_example.py  ibl_repro_ephys_traj.pkl  reproducible_ephys_fig1_alltraj_onebrainvolume_umr.py  setup.py  test_decoding.ipynb  test_gaelle.ipynb  test_scgb.ipynb
.github/: dependabot.yml
.github/workflows/: dependabot.yml  test.yml  version_bump.yml
.ipynb_checkpoints/: test_decoding-checkpoint.ipynb  test_gaelle-checkpoint.ipynb  test_scgb-checkpoint.ipynb
API/: README.md  pyproject.toml  requirements.txt
API/oursin/: __init__.py  camera.py  client.py  custom.py  dock.py  files.py  fov.py  io.py  lines.py  meshes.py  neurons.py  particles.py  primitives.py  probes.py  renderer.py  text.py  texture.py  ui.py  utils.py  volumes.py
API/oursin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
API/oursin/atlas/: __init__.py  ccf.py  ontology.py  waxholm.py
API/oursin/atlas/data/: ccf25.structures.json  waxholm39.structures.json
API/oursin/colors/: __init__.py  colors.py  xkcd_rgb.py
API/testing/: memmap.ipynb
API/tests/: test_io.py  test_schemas.py  test_urchin_core.py  test_utils.py
API/unityneuro/: ibl.py  render.py
API/unityneuro.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Examples/: bwm_2pass_coverage_volume.ipynb  example_client.py  explode_example.ipynb  glm_kernel_example.ipynb  histology_example.ipynb  jordan_coverage_example.ipynb  nick_coverage_example.ipynb  qiqitest (2).ipynb  qiqitest.ipynb  refactored_example.ipynb  repro_ephys_fig7.ipynb  reproducible_ephys_fig1.ipynb  reproducible_ephys_fig2.ipynb  saghar_calcs.ipynb  saghar_demo.ipynb  showing_neurons_from_file.ipynb  test_decoding.ipynb  test_gaelle.ipynb  volumetric_data_example.ipynb
Examples/.ipynb_checkpoints/: camera_example-checkpoint.ipynb  example_client-checkpoint.py  jordan_coverage_example-checkpoint.ipynb  reproducible_ephys_fig1-checkpoint.ipynb  test_decoding-checkpoint.ipynb
Examples/basics/: Create_and_Delete.ipynb  Text.ipynb  areas.ipynb  camera_example.ipynb  explode_example.ipynb  lines.ipynb  neurons_probes.ipynb  primitive_meshes.ipynb
Examples/bwm_coverage/: bwm_insertion_animation.ipynb  bwm_slice_coverage_viewer.ipynb
Examples/data/: region_colors.csv
Examples/lozano/: probe_demo.ipynb
Examples/ottenheimer_hjort_bowen_2022/: environment.yml  plotting_examples.ipynb
Examples/qiqi/: bwm_all_traj.csv  merging_bwm_and_clusters_dataset.ipynb  notextprobes_rotatingbrain.ipynb  qiqitest (1).ipynb  qiqitest-Copy1.ipynb  qiqitest.ipynb  textprobes_rotatingbrain.ipynb
Examples/steinmetz_3dvol_test/: test.ipynb
Examples/yum_yikes_2022/: ML_AP_DV_fromBregma.npy  plot_neurons.ipynb
Server/: package-lock.json  package.json  server.js
UnityClient/: UpgradeLog.htm  app.config  packages.config
UnityClient/Assets/: BuildConfig_WebGL.buildconfiguration  UniversalRenderPipelineAsset.asset  UniversalRenderPipelineAsset_Renderer.asset  packages.config
docs/source/: conf.py
source/: index.rst
unitymouse/: __init__.py  render.py
unityneuro/: __init__.py  render.py
unityneuro.egg-info/: PKG-INFO  SOURCES.txt
(+414 files in other folders)
