[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "oursin"
version = "0.5.0"
description = "Urchin - Universal Renderer Creating Helpful Images for Neuroscience Python API"
readme = "README.md"
authors = [
  "Daniel Birman <dbirman@uw.edu>"
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = ["atlas/data/*.json"]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
python-socketio = { version = ">=5.8, <5.11", extras = ["client"] }
numpy = ">=1.24.3, <1.27.0"
Pillow = ">=9.5, <10.2"

[tool.poetry.scripts]

[tool.poetry.urls]
homepage = "https://virtualbrainlab.org/urchin/installation_and_use.html"
repository = "https://github.com/VirtualBrainLab/Urchin"