[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oursin"
dynamic = ["version"]
description = 'Urchin - Universal Renderer Creating Helpful Images for Neuroscience Python API'
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = "MIT"
keywords = ["virtualbrainlab", "neuroscience", "renderer"]
authors = [
  { name = "Daniel Birman", email = "dbirman@uw.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "pydantic==2.6.4",
  "python-socketio[client]>=5.8, <5.11",
  "numpy>=1.23.3, <1.27.0",
  "Pillow>=9.5, <10.2",
  "vbl-aquarium>=0.0.10",
]

[tool.hatch.version]
path = "oursin/__about__.py"

[project.urls]
Documentation = "https://virtualbrainlab.org/urchin/installation_and_use.html"
Issues = "https://github.com/VirtualBrainLab/Urchin/issues"
Source = "https://github.com/VirtualBrainLab/Urchin"